@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2017,v 1.5341 2017/12/21 03:47:24 manu Exp $
+$NetBSD: CHANGES-2017,v 1.5342 2017/12/21 03:50:43 manu Exp $
 
 Changes to the packages collection and infrastructure in 2017:
 
@@ -7709,3 +7709,4 @@ Changes to the packages collection and infrastructure in 2017:
 	Updated x11/modular-xorg-server to 1.19.6 [wiz 2017-12-20]
 	Updated x11/modular-xorg-xephyr to 1.19.6 [wiz 2017-12-20]
 	Added www/ap2-upload 0.7 [manu 2017-12-21]
+	Added www/ap22-auth-ofba 0.6 [manu 2017-12-21]
